@@ -92,7 +92,7 @@ QTreeWidgetItem* AppDialog::initTopItem(QString text, QPixmap icon)
 
 void AppDialog::loadApps()
 {
-    QTreeWidgetItem* parent;
+    QTreeWidgetItem* parent = NULL;
     foreach (Application app, mw->getApplications())
     {
         switch (app.category)
@@ -157,18 +157,16 @@ void AppDialog::loadApps()
             break;
         }
 
-        if (parent) {
-            QTreeWidgetItem* it;
-            if (app.category==Application::TOP)
-                it=new QTreeWidgetItem(treeWidget);
-            else
-                it=new QTreeWidgetItem(parent);
-            it->setText(0, app.name);
-            it->setToolTip(0,app.comment);
-            it->setIcon(0,app.icon);
-            it->setData(0, Qt::UserRole, app.exec);
-            it->setData(0, Qt::UserRole+1, app.comment);
-        }
+        QTreeWidgetItem* it;
+        if (app.category==Application::TOP)
+            it=new QTreeWidgetItem(treeWidget);
+        else
+            it=new QTreeWidgetItem(parent);
+        it->setText(0, app.name);
+        it->setToolTip(0,app.comment);
+        it->setIcon(0,app.icon);
+        it->setData(0, Qt::UserRole, app.exec);
+        it->setData(0, Qt::UserRole+1, app.comment);
     }
     treeWidget->sortItems(0,Qt::AscendingOrder);
 }
