@@ -570,6 +570,8 @@ x2goclient (4.1.0.0-0x2go1) UNRELEASED; urgency=medium
       differently.
     - macbuild.sh: get rid of problems and use gfind directly. We need special
       GNU features.
+    - src/appdialog.cpp: logic so that X2Go-Top applications are shown again.
+      Used faulty logic when silencing compiler warnings.
 
   [ Bernard Cafarelli ]
   * New upstream version (4.1.0.0):
